Do not use deprecated Class.newInstance()